# main

./: -  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  COMPLEX_SCENARIOS.md  IMPROVEMENTS_APPLIED.md  OPENCLAW_REFERENCE_NOTES.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_BIBLE.md  PROJECT_DOCUMENTATION.md  QUICK_WINS.md  README copy.md  README.md  README2.md  SCENARIO_REPORT.md  TEAM_INTRO.md  WORK_SUMMARY.md  analysis_report.md  collector.db-shm  collector.db-wal  collector_run2.db  collector_run2.db-shm  collector_run2.db-wal  commercial_feasibility.md  dashboard.jsx  docker-compose.yml  generated_workflow.py  kill.sh  package-lock.json  requirements.txt  run_all_scenarios.sh  run_ari.py  start_collector.bat  upgrade.md  가설 기반 연구 시스템 구현 방안.md
core/: Cargo.toml  DEMO_SCENARIOS.md  DEMO_TEST_PLAN.md  README.md  insert_rec.py  insert_rec.rs  local-os-agent.code-workspace  refactor_db.py
core/src/: action_schema.rs  analyzer.rs  api_server.rs  applescript.rs  approval_gate.rs  architect.rs  bash_executor.rs  browser_automation.rs  cli_llm.rs  command_queue.rs  consistency_check.rs  content_extractor.rs  context_pruning.rs  db.rs  dependency_check.rs  dynamic_controller.rs  error.rs  execution_controller.rs  executor.rs  feedback_collector.rs  intent_router.rs  ipc.rs  lib.rs  llm_gateway.rs  main.rs  mcp_client.rs  memory.rs  n8n_api.rs  nl_automation.rs  nl_store.rs  notifier.rs  orchestrator.rs  pattern_detector.rs  peekaboo_cli.rs  performance_verification.rs  permission_manager.rs  plan_builder.rs  policy.rs  privacy.rs  project_scanner.rs  (+25 more)
(+1295 files in other folders)
