[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
chrono = { version = "=0.4.38", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
lazy_static = "1.4"
sysinfo = "0.30"
notify = "6.1"
yup-oauth2 = "9"
hyper = "0.14"
hyper-rustls = "0.25"
base64 = "0.21"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
cron = "0.12"
regex = "1.10"
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lancedb = "0.4"
futures = "0.3"
# fastembed removed due to ort-sys build issues. Using OpenAI for now.
arrow = { version = "51", features = ["prettyprint"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
accessibility-sys = "0.1"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
